--- a/templates/clear_logo/template.css
+++ b/templates/clear_logo/template.css
@@ -654,34 +654,15 @@ ul.cols-8 li,ul.cols-8-ul,table.cols-8 td {
   margin-bottom: 0.2em;
 }
 
-.numeric-multi td.answer ul.multiplenumerichelp,.numeric-multi td.answer ul.multiplenumerichelp.slider
-  {
-  display: table;
-  font-size: 80%;
+.numeric-multi td.answer li.multiplenumerichelp span {
+	text-align: center;
+	background: transparent none;
 }
 
-.numeric-multi td.answer ul.multiplenumerichelp.slider li {
-  display: table-row;
-}
-
-.numeric-multi td.answer ul.multiplenumerichelp li label,.numeric-multi td.answer ul.multiplenumerichelp.slider li label
-  {
-  padding: 0.3em 0% 0% 0%;
-  display: table-cell;
-}
-
-.numeric-multi td.answer ul.multiplenumerichelp li span,.numeric-multi td.answer ul.multiplenumerichelp.slider li span
-  {
-  padding: 0 0 0 0.3em;
-  display: table-cell;
-}
-
-.numeric-multi td.answer ul.multiplenumerichelp span input {
-  border: none;
-  background-color: #fff;
-  color: #222;
-  padding: 0%;
-  width: 7em;
+.numeric-multi td.answer li.multiplenumerichelp span span {
+	display: inline;
+	padding: 0;
+	font-size: 125%;
 }
 
 .text-short input,.text-short textarea,.text-long textarea,.text-huge textarea
